--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="menu-title">網站資訊</div>
                     <div class="menu-item active" onclick="loadContent('intro')">網站介紹</div>
                     <!-- <div class="menu-item" onclick="loadContent('guide')">快速導覽</div> -->
-                    <div class="menu-item" onclick="loadContent('terms')">更新日志</div>
+                    <div class="menu-item" onclick="loadContent('terms')">Update Log</div>
                 </div>
 
                 <div class="menu-section">
