fix bug of regex-tool

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="sidebar-header">
                 <div class="header-title">
                     <h1>Daifuku Toolbox</h1>
-                    <p>v0.1</p>
+                    <p>v0.1.1</p>
                 </div>
 
                 <div class="settings-container">
@@ -105,9 +105,14 @@
                 title: '更新日誌',
                 content: `
                     <h3>版本更新記錄</h3>
+
+                    <div class="info-box">
+                        <p><strong>v0.1.1</strong></p>
+                        - 修復: Regex工具無法使用&lt;style&gt;以及&#123;&#123;match&#125;&#125;
+                    </div>
                     
                     <div class="info-box">
-                        <p><strong>v0.1</strong></p>
+                        <p><strong>v0.1.0</strong></p>
                         - 新增 Regex工具
                     </div>
                 `
